<resources>
    <string name="registeredText">Ja ets usuari?</string>
    <string name="accessButton">Identifica\'t</string>
    <string name="noRegisteredText">Encara no ets usuari?</string>
    <string name="registerUserButton">Registra\'t</string>
    <string name="accessActivity">Accés usuaris</string>
    <string name="registerTitle">Registre d\'usuari</string>
    <string name="hintUserName">Nom usuari</string>
    <string name="hintIdUser">Identificador usuari</string>
    <string name="hintUserMail">Correu electrònic</string>
    <string name="hintUserPass">Contrasenya</string>
    <string name="hintUserPassRep">Confirmació contrasenya</string>
    <string name="registering">Registrant usuari...</string>
    <string name="idField">Siusplau, introdueix un identificador</string>
    <string name="mailField">Siusplau, introdueix un correu electrònic</string>
    <string name="mailFormat">El correu electrònic no és vàlid</string>
    <string name="passwordField">Siusplau, introdueix una contrasenya</string>
    <string name="passwordTooShort">La contrasenya no pot ser inferior a 6 caràcters</string>
    <string name="samePass">Les contrasenyes no són iguals</string>
    <string name="failedRegister">No s\'ha pogut registrar l\'usuari, siusplau torna-ho a provar</string>
    <string name="successfulRegister">Usuari registrat correctament</string>
    <string name="loginSuccess">Sessió iniciada correctament</string>
    <string name="failedLogin">No s\'ha pogut iniciar sessió, siusplau torna-ho a provar</string>
    <string name="loginTitle">Accés TrekkingChallenge</string>
    <string name="logging">Iniciant sessió usuari...</string>
    <string name="loginActivity">Inici de sessió</string>
    <string name="loginButton">Accedir</string>
    <string name="infoName">Nom:</string>
    <string name="infoMail">Mail:</string>
    <string name="actionEditProfile">Modificar perfil</string>
    <string name="actionDeleteProfile">Eliminar perfil</string>
    <string name="actionUserHistory">El meu històric</string>
    <string name="buttonSignOut">Tancar sessió</string>
    <string name="userSignOut">Sessió tancada</string>
    <string name="userAccountDeleted">Compte esborrat</string>
    <string name="userAreaActivity">Àrea d\'usuari</string>
    <string name="deleteUserConfirmation">Estàs segur que vols eliminar el compte d\'usuari?</string>
    <string name="editProfileActivity">Modificar perfil</string>
    <string name="confirmEditProfile">Perfil d\'usuari modificat</string>
    <string name="usersInvitedTrip">Usuaris afegits a l\'excursió</string>
    <string name="actionDone">Fet</string>
    <string name="listUsersActivity">Usuaris</string>
    <string name="usersInvitedGroup">"Usuaris afegits al grup"</string>
    <string name="historyChallenge">Històric de reptes</string>
    <string name="historyTrips">Històric d\'excursions</string>
    <string name="historyRoutes">Històric de rutes</string>
    <string name="totalChallenges">Total reptes:</string>
    <string name="totalTrips">Total trips:</string>
    <string name="totalRoutes">Total rutes:</string>
    <string name="challengeWin">Reptes guanyats:</string>
    <string name="totalKms">Kms totals:</string>
    <string name="totalIncSlope">Desnivell acumulat:</string>
    <string name="routeHours">Hores de ruta:</string>
    <string name="userHistoryActivity">El meu històric</string>
    <string name="groupDeleted">Grup eliminat</string>
    <string name="groupNotDeleted">No s\'ha pogut eliminar el grup</string>
    <string name="publicGroup">Grup públic</string>
    <string name="privateGroup">Grup privat</string>
    <string name="listGroupsActivity">Grups</string>
    <string name="tabAllGroups">"Tots"</string>
    <string name="tabMyGroups">"Els meus"</string>
    <string name="groupJoined">T\'has unit al grup</string>
    <string name="groupLeft">Has abandonat el grup</string>
    <string name="joinGroupAsk">Et vols unir a aquest grup?</string>
    <string name="groupLeftAsk">Segur que vols abandonar el grup?</string>
    <string name="groupAskDeleted">Segur que vols eliminar el grup?</string>
    <string name="textGroupDescription">Descripció:</string>
    <string name="textGroupMembers">Nombre d\'integrants:</string>
    <string name="alreadyInGroup">Ja formes part del grup</string>
    <string name="noMemberGroup">No formes part d\'aquest grup</string>
    <string name="action_message">Fòrum</string>
    <string name="adviceAdminGroup">Un administrador no pot abandonar el grup</string>
    <string name="failedAddGroup">El grup no s\'ha creat correctament</string>
    <string name="groupSaved">Grup creat</string>
    <string name="hintNameGroup">Nom del grup</string>
    <string name="hintDescription">Descripció del grup</string>
    <string name="checkIsPublic">Grup públic</string>
    <string name="addGroupActivity">Nou grup</string>
    <string name="groupAlreadyExists">El nom del grup ja existeix</string>
    <string name="textNameGroup">Nom del grup:</string>
    <string name="editGroupActivityName">Modificar grup</string>
    <string name="editGroupOk">Grup modificat correctament</string>
    <string name="editGroupFail">No s\'ha pogut modificar el grup</string>
    <string name="trackTitle">Recorregut de la ruta:</string>
    <string name="profileTitle">Perfil de la ruta:</string>
    <string name="trackDownload">Descarregar track</string>
    <string name="otherTracks">Altres recorreguts ruta:</string>
    <string name="trackActivity">Recorregut ruta</string>
    <string name="wikilocFont">Font https://es.wikiloc.com</string>
    <string name="finishRouteActivity">Ruta realitzada</string>
    <string name="titleFinishRoute">Ruta superada!</string>
    <string name="finishDate">Data realització</string>
    <string name="finishDist">Distància realitzada</string>
    <string name="finishTime">Temps realitzat</string>
    <string name="finishHour">Temps</string>
    <string name="distAdvice">Siusplau, introdueix una distància</string>
    <string name="timeAdvice">Siusplau, introdueix un temps</string>
    <string name="finishedSaved">Resultat guardat correctament</string>
    <string name="finishedFailed">No s\'ha pogut guardar el resultat</string>
    <string name="spring">Primavera</string>
    <string name="fall">Tardor</string>
    <string name="summer">Estiu</string>
    <string name="winter">Hivern</string>
    <string name="imageNotDonwloaded">Imatge no descarregada</string>
    <string name="action_opinion">Opinions</string>
    <string name="detailsButton">Informació detallada</string>
    <string name="tracksButton">Recorregut i perfil</string>
    <string name="region">Comarca:</string>
    <string name="township">Municipi:</string>
    <string name="notAlreadyDone">No realitzada</string>
    <string name="advancedSearch">Cerca avançada</string>
    <string name="difficult">Difícil</string>
    <string name="moderate">Moderat</string>
    <string name="easy">Fàcil</string>
    <string name="all">Qualsevol</string>
    <string name="difficultRoute">Dificultat ruta</string>
    <string name="lessCheck">Less</string>
    <string name="middleCheck">Middle</string>
    <string name="highCheck">High</string>
    <string name="lessKm"> &lt;10km</string>
    <string name="middleKm"> 10-15km</string>
    <string name="highKm"> &gt;15km</string>
    <string name="distanceRoute">Distància ruta</string>
    <string name="typeRoute">Tipus de recorregut</string>
    <string name="circular">Circular</string>
    <string name="goBack">Anada/Tornada</string>
    <string name="search">Buscar</string>
    <string name="infoDetail">Informació detallada:</string>
    <string name="titleDetail">Informació detallada</string>
    <string name="infoMeteo">Meteorologia:</string>
    <string name="startPlace">Lloc de sortida:</string>
    <string name="meteoFont">Font http://www.meteo.cat/</string>
    <string name="listRoutesActivity">Llista de rutes</string>
    <string name="noMatches">No hi han coincidències</string>
    <string name="headerRouteName">Ruta</string>
    <string name="headerRouteDate">Data</string>
    <string name="headerRouteResult">Resultats</string>
    <string name="routeHistoryActivity">Històric de rutes</string>
    <string name="publicTrip">Excursió pública</string>
    <string name="privateTrip">Excursió privada</string>
    <string name="routeTrip">Ruta escollida:</string>
    <string name="dayTrip">Dia planificat:</string>
    <string name="placeTrip">Lloc de trobada:</string>
    <string name="descTrip">Descripció:</string>
    <string name="membTrip">Integrants:</string>
    <string name="tripJoined">T\'has unit a l\'excursió</string>
    <string name="joinTripAsk">Et vols unir a aquesta excursió?</string>
    <string name="tripLeftAsk">Segur que vols abandonar l\'excursió?</string>
    <string name="tripLeft">Has abandonat l\'excursió</string>
    <string name="tripAskDeleted">Segur que vols eliminar l\'excursió?</string>
    <string name="tripDeleted">Excursió eliminada </string>
    <string name="tripNotDeleted">No s\'ha pogut eliminar l\'excursió</string>
    <string name="dateTrip">Data excursió</string>
    <string name="alreadyInTrip">Ja formes part de l\'excursió</string>
    <string name="noMemberTrip">No formes part d\'aquesta excursió</string>
    <string name="adviceAdminTrip">Un administrador no pot abandonar l\'excursió</string>
    <string name="chooseRouteSpinner">- Selecciona la ruta -</string>
    <string name="hintNameTrip">Nom de l\'excursió</string>
    <string name="hintDescTrip">Descripció excursió</string>
    <string name="hintPlaceTrip">Lloc de trobada</string>
    <string name="addTripActivity">Nova excursió</string>
    <string name="tripIsPublic">Excursió pública</string>
    <string name="tripSaved">Excursió creada correctament</string>
    <string name="failedAddTrip">No s\'ha pogut crear l\'excursió</string>
    <string name="placeAdvice">Siusplau, introdueix lloc de trobada</string>
    <string name="tripAlreadyExists">El nom de l\'excursió ja existeix</string>
    <string name="listTripsActivity">Excursions</string>
    <string name="tabAllTrips">"Totes"</string>
    <string name="tabMyTrips">"Les meves"</string>
    <string name="textNameTrip">Nom de l\'excursió:</string>
    <string name="editTripActivityName">Modificar excursió</string>
    <string name="editTripOk">Excursió modificada correctament</string>
    <string name="editTripFail">No s\'ha pogut modificar l\'excursió</string>
    <string name="headerTripName">Excursió</string>
    <string name="headerTripDate">Data</string>
    <string name="headerTripRoute">Ruta</string>
    <string name="headerTripResult">Resultats</string>
    <string name="tripHistoryActivity">Històric d\'excursions</string>
    <string name="finishTripActivity">Excursió realitzada</string>
    <string name="titleFinishTrip">Excursió superada!</string>
    <string name="resultsTrip">Resultats:</string>
    <string name="routeChallenge">Ruta escollida:</string>
    <string name="dateChallenge">Data límit:</string>
    <string name="descChallenge">Descripció:</string>
    <string name="headerPosition">Posició</string>
    <string name="headerUser">Usuari</string>
    <string name="headerTime">Temps</string>
    <string name="headerDistance">Distància</string>
    <string name="hintCommentTitle">Títol del comentari</string>
    <string name="hintCommentBody">Comentari</string>
    <string name="acceptButton">Acceptar</string>
    <string name="cancelButton">Cancel·lar</string>
    <string name="registerButton">Registrar</string>
    <string name="mainMenu">Menú principal</string>
    <string name="mapMenuButton">Mapa rutes</string>
    <string name="routesMenuButton">Llista rutes</string>
    <string name="tripMenuButton">Excursions</string>
    <string name="challengeMenuButton">Reptes</string>
    <string name="userMenuButton">Àrea usuari</string>
    <string name="groupMenuButton">Grups usuaris</string>
</resources>