<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:layout_width="@dimen/list_ranking_columns"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerPosition"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="1"
            android:layout_width="@dimen/list_ranking_columns"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerUser"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="2"
            android:layout_width="@dimen/list_ranking_columns"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerTime"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="3"
            android:layout_width="@dimen/list_ranking_columns"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerDistance"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

    </TableRow>

</TableLayout>