<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginEnd="15dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:layout_width="@dimen/list_widthColumn_4x1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerTripName"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="1"
            android:layout_width="@dimen/list_widthColumn_4x2"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerTripDate"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="2"
            android:layout_width="@dimen/list_widthColumn_4x3"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerTripRoute"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_column="3"
            android:layout_width="@dimen/list_widthColumn_4x4"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/headerTripResult"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

    </TableRow>

</TableLayout>