<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dip">

    <TextView
        android:id="@+id/tvTitleRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etCommentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintCommentTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/commentWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etCommentBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintCommentBody"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCancelComment"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="#E0E0E0"
            android:text="@string/cancelButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bAcceptComment"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="#009688"
            android:textColor="#FFFFFF"
            android:text="@string/registerButton"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>