<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".group.AddGroupActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <include android:id="@+id/addGroupToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/cast_expanded_controller_control_toolbar_min_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameGroupWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_title">

                <EditText
                    android:id="@+id/etNameGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginStart="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginEnd="@dimen/margin_left_right"
                    android:hint="@string/hintNameGroup" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_icon">

                <EditText
                    android:id="@+id/etDescriptionGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginStart="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginEnd="@dimen/margin_left_right"
                    android:hint="@string/hintDescription"
                    android:inputType="textMultiLine|textLongMessage" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cBPublicGgroup"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginStart="@dimen/margin_left_right"
                android:layout_marginTop="@dimen/margin_top_icon"
                android:textSize="@dimen/title2"
                android:text="@string/checkIsPublic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top_icon"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_button"
                    android:background="#E0E0E0"
                    android:onClick="cancelGroup"
                    android:text="@string/cancelButton"
                    android:textSize="@dimen/text_button"/>

                <Button
                    android:id="@+id/acceptGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_button"
                    android:background="#009688"
                    android:textColor="#FFFFFF"
                    android:onClick="addGroup"
                    android:text="@string/acceptButton"
                    android:textSize="@dimen/text_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
